# MusicMILA

./: README.md  classifySongsfromdataset.py  extractactivityfromtweet.py  extractmoodfromtweet.py  extractwordlist.py  songIDActivityDict.txt  stopword.txt
ActivityMoodFiles/: outouttweet2.csv
ActivityMoodFiles (copy)/: outouttweet11.csv
FinalProject/: GenerateActivityTrainData.py  app-w.py  classifySongsfromdataset.py  extractArtistLocation.py  extractmoodfromtweet.py  fetchTrackIdFromMILA.py  parsetweetfromrawdata.py  testMILA.py  testSVM.py
Language_Guess/: .goutputstream-MU1IVW  .goutputstream-SI7IVW  .goutputstream-U03GVW  .goutputstream-VFUPVW  .goutputstream-XRPOVW  ExtractEnglish.py  PKG-INFO  README.rst  generate_data.py  setup.cfg
Language_Guess/guess_language/: __init__.py  __main__.py
Language_Guess/guess_language/data/: __init__.py
Language_Guess/trigrams/: az
OnlyTweetFiles/: tweet3.csv
Tweet_CSV_Files/: tweet0.csv  tweet10.csv  tweet6.csv
Tweet_Mood_Activity_Files/: outouttweet10.csv  outouttweet11.csv  outouttweet6.csv  outouttweet7.csv  outouttweet8.csv  outouttweet9.csv
Tweet_Mood_Files/: outtweet0.csv  outtweet10.csv  outtweet11.csv  outtweet2.csv  outtweet4.csv  outtweet8.csv  outtweet9.csv
UnorganizedWordlist/: daily.txt  love.txt  mental.txt  physical.txt  relaxing.txt
Wordlist_Files/: Emoticons.doc
output/: outtweet3.csv  outtweet6.csv  outtweet7.csv
wordlists/: daily.txt  disgust.txt  fear.txt  physical.txt  surprise.txt  test.py
xlsfiles/: outtweet10.csv  outtweet11.csv  outtweet7.csv  outtweet8.csv  tweet0.csv  (+5 more)
(+100 files in other folders)
